@@ -95,7 +95,7 @@ function opt = mpoption(varargin)
 %                                       expense of |V|
 %       [  0 - do NOT enforce limits                                        ]
 %       [  1 - enforce limits, simultaneous bus type conversion             ]
-%   cpf.error_tol           1e-3        tolerance for adaptive step control
+%   cpf.adapt_step_tol      1e-3        tolerance for adaptive step control
 %   cpf.p_lims_tol          0.01        tolerance for generator active
 %                                       power limit enforcement (MW)
 %   cpf.q_lims_tol          0.01        tolerance for generator reactive
@@ -1433,7 +1433,7 @@ if ~isstruct(opt)
             'adapt_step_damping',   0.7, ...
             'enforce_p_lims',       0, ...
             'enforce_q_lims',       0, ...
-            'error_tol',            1e-3, ...
+            'adapt_step_tol',       1e-3, ...
             'p_lims_tol',           0.01, ...
             'q_lims_tol',           0.01, ...
             'step_min',             1e-4, ...
