@@ -218,7 +218,7 @@ mpopt =  mpopt0;
     mpopt = mpoption(mpopt, 'cpf.stop_at', 1);
     mpopt = mpoption(mpopt, 'cpf.step', 0.05);
     %mpopt = mpoption(mpopt, 'cpf.adapt_step', 1);
-    %mpopt = mpoption(mpopt, 'cpf.error_tol', 2e-5);
+    %mpopt = mpoption(mpopt, 'cpf.adapt_step_tol', 2e-5);
     mpopt = mpoption(mpopt, 'cpf.plot.level', plot_nose_curve);
     %mpopt = mpoption(mpopt, 'cpf.plot.bus', 9);
 mpopt0 = mpopt;
