@@ -15,6 +15,10 @@ For change history for MOST, see most/docs/CHANGES.
 Changes since 6.0b1
 -----------------
 
+9/27/16
+    - INCOMPATIBLE CHANGE: Changed name of 'cpf.error_tol' option to
+      'cpf.adapt_step_tol'.
+
 9/22/16
     - Update tests for compatibility with Optimization Toolbox 7.5 (R2016b),
       which removes 'active-set' algorithm for quadprog() and 'active-set'
